--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,22 +2,23 @@
   "manifest_version": 3,
   "name": "AO Shield",
   "version": "1.0.0",
-  "description": "AI-powered blockchain security that protects your transactions from scams and malicious actors in real-time.",
-  "permissions": ["activeTab", "storage", "scripting", "alarms"],
-  "host_permissions": ["https://*/*", "http://localhost/*"],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_start"
-    }
+  "description": "Security shield extension for the AO ecosystem - protecting your decentralized computing experience",
+  "permissions": [
+    "activeTab",
+    "storage",
+    "notifications",
+    "tabs",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "https://arweave.net/*",
+    "https://*.arweave.net/*",
+    "https://*.ar.io/*",
+    "https://ao.arweave.net/*"
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "AO Shield - Blockchain Security",
+    "default_title": "AO Shield",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -25,16 +26,26 @@
       "128": "icons/icon128.png"
     }
   },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content_ao.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["ao-sdk.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["injected.js"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  }
 }
