--- a/extension/package.json
+++ b/extension/package.json
@@ -1,32 +1,26 @@
 {
   "name": "ao-shield-extension",
   "version": "1.0.0",
-  "description": "AI-powered blockchain security extension that protects transactions from scams and malicious actors",
+  "description": "Security-focused browser extension for the AO ecosystem with real-time threat detection",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "build": "echo 'Extension is ready - no build step needed'",
-    "dev": "echo 'Load extension in Chrome developer mode'",
-    "zip": "zip -r ao-shield-extension.zip . -x '*.git*' 'node_modules/*' '*.DS_Store' 'package*.json'",
-    "test": "echo 'No tests configured yet'"
+    "dev": "vite --host localhost --port 5173",
+    "build": "vite build && node build-extension.js",
+    "preview": "vite preview"
   },
-  "keywords": [
-    "blockchain",
-    "security",
-    "web3",
-    "ethereum",
-    "arweave",
-    "chrome-extension",
-    "fraud-detection",
-    "transaction-security"
-  ],
-  "author": "AO Shield Team",
-  "license": "MIT",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dinahmaccodes/ao-shield"
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "lucide-react": "^0.263.1"
   },
-  "bugs": {
-    "url": "https://github.com/dinahmaccodes/ao-shield/issues"
-  },
-  "homepage": "https://github.com/dinahmaccodes/ao-shield#readme"
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
+  }
 }
