--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "workspace/foundry-fund-me-25/lib/foundry-devops"]
 	path = workspace/foundry-fund-me-25/lib/foundry-devops
 	url = https://github.com/cyfrin/foundry-devops
+[submodule "workspace/foundry-smart-contract-lottery-f23/lib/forge-std"]
+	path = workspace/foundry-smart-contract-lottery-f23/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
