feat: moving to a new repo and connect wallet working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arweave-wallet-kit/browser-wallet-strategy": "^0.1.1",
+    "@arweave-wallet-kit/core": "^0.1.1",
+    "@arweave-wallet-kit/othent-strategy": "^0.1.1",
+    "@arweave-wallet-kit/react": "^0.3.2",
+    "@arweave-wallet-kit/styles": "^0.1.1",
+    "@arweave-wallet-kit/wander-strategy": "^0.1.2",
+    "@arweave-wallet-kit/webwallet-strategy": "^0.0.1-beta.4",
     "@hookform/resolvers": "^3.10.0",
+    "@permaweb/aoconnect": "^0.0.90",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -60,6 +68,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
